added to domain route

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.redis.host=localhost
 spring.redis.port=6379
 # If your Redis setup requires a password, uncomment and set the following:
 # spring.redis.password=yourpassword
+server.servlet.contextPath=/api
+spring.jackson.property-naming-strategy=SNAKE_CASE
