updated urls and unit tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.redis.port=6379
 # spring.redis.password=yourpassword
 apiPrefix=/api
 spring.jackson.property-naming-strategy=SNAKE_CASE
+phishing.db.links=https://raw.githubusercontent.com/mitchellkrogza/Phishing.Database/master/ALL-phishing-links.tar.gz
+phishing.db.domains=https://raw.githubusercontent.com/mitchellkrogza/Phishing.Database/master/ALL-phishing-domains.tar.gz
+phishing.db.links.interval=3600000
+phishing.db.domains.interval=3600000
