--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
 			<version>3.6.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>33.0.0-jre</version>
+		</dependency>
 	</dependencies>
 
 	<build>
