--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.redis.host=localhost
-spring.redis.port=6379
-# If your Redis setup requires a password, uncomment and set the following:
-# spring.redis.password=yourpassword
+spring.redis.timeout=900000
+spring.data.redis.url=${redis.railway.internal}
+
 apiPrefix=/api
 spring.jackson.property-naming-strategy=SNAKE_CASE
 phishing.db.links=https://raw.githubusercontent.com/mitchellkrogza/Phishing.Database/master/ALL-phishing-links.tar.gz
 phishing.db.domains=https://raw.githubusercontent.com/mitchellkrogza/Phishing.Database/master/ALL-phishing-domains.tar.gz
 phishing.db.links.interval=3600000
 phishing.db.domains.interval=3600000
+
