try new env variable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.redis.timeout=900000
-spring.data.redis.url=${REDIS_PRIVATE_URL}
+spring.data.redis.url= ${{ REDIS_PRIVATE_URL }}
 
 apiPrefix=/api
 spring.jackson.property-naming-strategy=SNAKE_CASE
