added basic auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,5 @@ phishing.db.links=https://raw.githubusercontent.com/mitchellkrogza/Phishing.Data
 phishing.db.domains=https://raw.githubusercontent.com/mitchellkrogza/Phishing.Database/master/ALL-phishing-domains.tar.gz
 phishing.db.links.interval=3600000
 phishing.db.domains.interval=3600000
-
+spring.security.user.name= ${AUTH_USERNAME}
+spring.security.user.password= ${AUTH_PASSWORD}
