added rate limiting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ phishing.db.links.interval=3600000
 phishing.db.domains.interval=3600000
 spring.security.user.name= ${AUTH_USERNAME}
 spring.security.user.password= ${AUTH_PASSWORD}
+rate.limiter.capacity=20
+rate.limiter.refill=20
+rate.limiter.token=1
