add cors unblock list

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.security.user.password= ${AUTH_PASSWORD}
 rate.limiter.capacity=20
 rate.limiter.refill=20
 rate.limiter.token=1
+unblock.list= ${UNBLOCK_LIST}
