--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.ansaf</groupId>
 	<artifactId>shouldiclickthis</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>shouldiclickthis</name>
 	<description>An application to search and verify urls </description>
 	<properties>
