load from OpenPhishConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,13 @@ apiPrefix=/api
 spring.jackson.property-naming-strategy=SNAKE_CASE
 phishing.db.links=https://raw.githubusercontent.com/mitchellkrogza/Phishing.Database/master/ALL-phishing-links.tar.gz
 phishing.db.domains=https://raw.githubusercontent.com/mitchellkrogza/Phishing.Database/master/ALL-phishing-domains.tar.gz
-phishing.db.links.interval=3600000
-phishing.db.domains.interval=3600000
+phishing.db.linksInterval=3600000
+phishing.db.domainsInterval=3600000
+phishing.db.linksSplit=20
+phishing.db.domainsSplit=15
+openphish.interval=43200000
+openphish.url=https://openphish.com/feed.txt
+openphish.split=10
 spring.security.user.name= ${AUTH_USERNAME}
 spring.security.user.password= ${AUTH_PASSWORD}
 rate.limiter.capacity=20
