Added ipsum to datafetcher

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,11 @@ phishing.db.domainsSplit=15
 openphish.interval=43200000
 openphish.url=https://openphish.com/feed.txt
 openphish.split=10
+ipsum.interval=43200000
+ipsum.url=https://raw.githubusercontent.com/stamparm/ipsum/master/ipsum.txt
+ipsum.split=10
+ipsum.skip=7
+ipsum.delimiter=\t
 spring.security.user.name= ${AUTH_USERNAME}
 spring.security.user.password= ${AUTH_PASSWORD}
 rate.limiter.capacity=20
