--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,17 @@ ipsum.url=https://raw.githubusercontent.com/stamparm/ipsum/master/ipsum.txt
 ipsum.split=10
 ipsum.skip=7
 ipsum.delimiter=\t
+urlhaus.linkInterval=305000
+urlhaus.linkUrl=https://urlhaus.abuse.ch/downloads/text/
+urlhaus.linkSplit=10
+urlhaus.linkSkipHeader=9
+urlhaus.linkDelimiter=" "
+urlhaus.domainInterval=305000
+urlhaus.domainUrl=https://urlhaus.abuse.ch/downloads/hostfile/
+urlhaus.domainSplit=10
+urlhaus.domainSkipHeader=8
+urlhaus.domainSkipFooter=1
+urlhaus.domainDelimiter=\t
 spring.security.user.name= ${AUTH_USERNAME}
 spring.security.user.password= ${AUTH_PASSWORD}
 rate.limiter.capacity=20
