--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,22 +1,4 @@
-spring.redis.timeout=900000
-spring.data.redis.url=redis://localhost:6379/1
-
-apiPrefix=/api
-spring.jackson.property-naming-strategy=SNAKE_CASE
-phishing.db.links=https://raw.githubusercontent.com/mitchellkrogza/Phishing.Database/master/ALL-phishing-links.tar.gz
-phishing.db.domains=https://raw.githubusercontent.com/mitchellkrogza/Phishing.Database/master/ALL-phishing-domains.tar.gz
-phishing.db.linksInterval=3600000
-phishing.db.domainsInterval=3600000
-phishing.db.linksSplit=20
-phishing.db.domainsSplit=15
-openphish.interval=43200000
-openphish.url=https://openphish.com/feed.txt
-openphish.split=10
-spring.security.user.name=user
-spring.security.user.password=password
-rate.limiter.capacity=20
-rate.limiter.refill=20
-rate.limiter.token=1
-unblock.list=http://localhost:5173,http://127.0.0.1:5173
-
-
+REDIS_PRIVATE_URL=redis://localhost:6379/1
+AUTH_USERNAME=user
+AUTH_PASSWORD=password
+UNBLOCK_LIST=http://localhost:5173,http://127.0.0.1:5173
