Added cins ip ban list

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,9 @@ urlhaus.domainSplit=10
 urlhaus.domainSkipHeader=8
 urlhaus.domainSkipFooter=1
 urlhaus.domainDelimiter=\t
+cins.interval=3600000
+cins.url=https://cinsscore.com/list/ci-badguys.txt
+cins.split=5
 spring.security.user.name= ${AUTH_USERNAME}
 spring.security.user.password= ${AUTH_PASSWORD}
 rate.limiter.capacity=20
