Added digital side feed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.redis.timeout=900000
 spring.data.redis.url= ${REDIS_PRIVATE_URL}
-
 apiPrefix=/api
 spring.jackson.property-naming-strategy=SNAKE_CASE
 phishing.db.links=https://raw.githubusercontent.com/mitchellkrogza/Phishing.Database/master/ALL-phishing-links.tar.gz
@@ -31,6 +30,18 @@ urlhaus.domainDelimiter=\t
 cins.interval=3600000
 cins.url=https://cinsscore.com/list/ci-badguys.txt
 cins.split=5
+digitalside.linkInterval=43200000
+digitalside.linkUrl=https://osint.digitalside.it/Threat-Intel/lists/latesturls.txt
+digitalside.linkSplit=4
+digitalside.linkSkip=11
+digitalside.ipInterval=43200000
+digitalside.ipUrl=https://osint.digitalside.it/Threat-Intel/lists/latestips.txt
+digitalside.ipSplit=4
+digitalside.ipSkip=11
+digitalside.domainInterval=43200000
+digitalside.domainUrl=https://osint.digitalside.it/Threat-Intel/lists/latestdomains.txt
+digitalside.domainSplit=4
+digitalside.domainSkip=11
 spring.security.user.name= ${AUTH_USERNAME}
 spring.security.user.password= ${AUTH_PASSWORD}
 rate.limiter.capacity=20
