bugfix: load later for urlhaus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,12 +16,12 @@ ipsum.url=https://raw.githubusercontent.com/stamparm/ipsum/master/ipsum.txt
 ipsum.split=10
 ipsum.skip=7
 ipsum.delimiter=\t
-urlhaus.linkInterval=305000
+urlhaus.linkInterval=3600000
 urlhaus.linkUrl=https://urlhaus.abuse.ch/downloads/text/
 urlhaus.linkSplit=10
 urlhaus.linkSkipHeader=9
 urlhaus.linkDelimiter=" "
-urlhaus.domainInterval=305000
+urlhaus.domainInterval=3600000
 urlhaus.domainUrl=https://urlhaus.abuse.ch/downloads/hostfile/
 urlhaus.domainSplit=10
 urlhaus.domainSkipHeader=8
